[package]
name = "netmeasure2"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
strum = "0.9.0"
strum_macros = "0.9.0"
enum-unitary = "0.3.4"
rand = "0.5.5"
miniserde = "0.1.1"
miniserde_tools = {path = "miniserde_tools"}
failure = "0.1.2"
counted-array = "0.1.2"
static_assertions = "0.2.5"

[workspace]
members = ["miniserde_tools"]