[package]
name = "netmeasure2"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
structopt = {version="0.2.10"}
strum = "0.9.0"
strum_macros = "0.9.0"
enum-unitary = "0.3.4"
rand = "0.5.5"
failure = "0.1.2"
counted-array = "0.1.2"
static_assertions = "0.2.5"
serde = {version = "1.0.79" , features = ["rc"]}
serde_derive = "1.0.79"
serde_cbor="0.9.0"
serde_json="1.0.28"
rand_derive = "0.3.1"
byteorder = "1.2.6"
spin_sleep = "0.3.7"
derivative = "1.0.0"
bincode = "1.0.1"
itertools = "0.5.10"

[workspace]
members = ["miniserde_tools"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'abort'
