[package]
name = "netmeasure2"
version = "0.2.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
structopt = "0.2.15"
strum = "0.15.0"
strum_macros = "0.15.0"
enum-unitary = "0.3.6"
rand = "0.6.5"
failure = {version="0.1.5", default-features=false, features=["std"]}
counted-array = "0.1.2"
static_assertions = "0.3.1"
serde = { version = "1.0.91", features = ["rc"] }
serde_derive = "1.0.91"
serde_cbor= "0.9.0"
serde_json= "1.0.39"
byteorder = "1.3.1"
spin_sleep = "0.3.7"
derivative = "1.0.2"
bincode = "1.1.3"
itertools = "0.8.0"
rand_xorshift = "0.1.1"

#[replace]
#"failure:0.1.5" = {path = "/mnt/src/git/rust-failure"}

[workspace]
members = ["miniserde_tools"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
